k8s/traefik/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: traefik
spec:
  redirectRegex:
    regex: "^http://(.*)"
    replacement: "https://$1"
    permanent: true
