k8s/traefik/ingress2.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
  namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.test.perelohome.com`)
      kind: Rule
      services:
        - name: nginx-clusterip-service
          port: 80
